--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<img class=" arrow arrow_left" src="./assets/images/arrow_left.png" alt="">
-		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="">
+		<img class="banner-img" src="./assets/images/slideshow/slide2.jpg" alt="Banner Print-it">
+		<img class="banner-img" src="./assets/images/slideshow/slide3.jpg" alt="Banner Print-it">
+		<img class="banner-img" src="./assets/images/slideshow/slide4.png" alt="Banner Print-it">
+		<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="image flèche gauche">
+		<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="image flèche droite">
 		<div class="dots">
-		
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
 		</div>
 	</div>
 	<section id="about-us" class="container">
