--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
    		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div id="js-dots" class="dots">
-			<span class="dot"></span>
+		<div class="dots">
+			<span class="dot dot_selected"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
 			<span class="dot"></span>
